# RepoTemplate_LuSt

./: .exrc  .gitignore  .gitmodules  CITATION.cff  LICENSE  Manifest.toml  README.md  _projectbuildingblocks.sh  config.json  install_requirements_python.py  main.py  pandoc-header.html  pyproject.toml  summary.md
.github/workflows/: runtests.yaml
code/: 00_projectbuildingblocks.py  _paths.sh  _projectbuildingblocks.jl  _projectbuildingblocks.py  _projectbuildingblocks.sh  main.jl  main.py  pyproject.toml
code/bash/: slurm_template.sh
code/src_jl_tests/: runtests.jl  submodulename_test_template.jl
code/src_py_tests/: submodulename_test_template.py
data/: README.md
emails/: email.tex
exploration/: .gitignore
outputs/models/: .gitignore
report/bib-refs/: bib-refs.bib
scripts/bash/: slurm_template.sh
scripts/julia/: main.jl
scripts/python/: main.py
src/bash/: project.sh
src/julia/: Julia.jl  Package.jl
src/python/: __init__.py
src/python/package/: __init__.py
