[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "src_py"
version = "0.0.1"
authors = [
  { name="Lukas Steinwender", email="address@domain.com" },
]
description = "your repo description"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://url/to/your/project/"
Issues = "https://url/to/your/project/issues"
