
[project]
name = "python"
version = "0.0.1"
authors = [
  { name="Lukas Steinwender", email="address@domain.com" },
]
description = "<project description>"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# #if any of your packages are not directly below `src`
# packages = [
#     #can not include any patterns from `project.name` in its name
#     "src/python/project",
# ]

[project.urls]
Homepage = "https://url/to/your/project/"
Issues = "https://url/to/your/project/issues"
