[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src_py"]

[project]
name = "src_py"
version = "0.0.1"
authors = [
  { name="Lukas Steinwender", email="" },
]
description = "your repo description"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "url/to/your/project/"
Issues = "url/to/your/project/issues"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "src_py_tests",
]
